PROJECT(PathologyExecutables)
ADD_SUBDIRECTORY(MultiResImageConverter)

IF(BUILD_DIAG_PATHOLOGY_TESTS)
  FIND_PACKAGE(UNITTEST REQUIRED)
  ADD_LIBRARY(UNITTEST SHARED IMPORTED)
  SET_PROPERTY(TARGET UNITTEST PROPERTY IMPORTED_IMPLIB ${UNITTEST_LIBRARY})	
  ADD_SUBDIRECTORY(TestRunner)
ENDIF(BUILD_DIAG_PATHOLOGY_TESTS)