PROJECT(PathologyExecutables)
ADD_SUBDIRECTORY(MultiResImageConverter)
ADD_SUBDIRECTORY(WSIConnectedComponents)
ADD_SUBDIRECTORY(WSIDistanceTransform)
ADD_SUBDIRECTORY(WSILabelStatistics)
ADD_SUBDIRECTORY(WSIThreshold)
ADD_SUBDIRECTORY(WSIArithmetic)

IF(BUILD_DIAG_PATHOLOGY_TESTS)
  FIND_PACKAGE(UNITTEST REQUIRED)
  ADD_LIBRARY(UNITTEST SHARED IMPORTED)
  SET_PROPERTY(TARGET UNITTEST PROPERTY IMPORTED_IMPLIB ${UNITTEST_LIBRARY})	
  ADD_SUBDIRECTORY(TestRunner)
ENDIF(BUILD_DIAG_PATHOLOGY_TESTS)